--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.sourcePaths": [
         "strategy_pattern/concept",
-        "observer_pattern/concept"
+        "observer_pattern/concept",
+        "strategy_pattern/problem"
     ]
 }
